config/base/webhook/manifests.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-compute-datumapis-com-v1alpha-instanceconsolesession
  failurePolicy: Fail
  name: minstanceconsolesession.kb.io
  rules:
  - apiGroups:
    - compute.datumapis.com
    apiVersions:
    - v1alpha
    operations:
    - CREATE
    resources:
    - instanceconsolesessions
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-compute-datumapis-com-v1alpha-workload
  failurePolicy: Fail
  name: mworkload.kb.io
  rules:
  - apiGroups:
    - compute.datumapis.com
    apiVersions:
    - v1alpha
    operations:
    - CREATE
    - UPDATE
    resources:
    - workloads
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-compute-datumapis-com-v1alpha-instanceconsolesession
  failurePolicy: Fail
  name: vinstanceconsolesession.kb.io
  rules:
  - apiGroups:
    - compute.datumapis.com
    apiVersions:
    - v1alpha
    operations:
    - CREATE
    resources:
    - instanceconsolesessions
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-compute-datumapis-com-v1alpha-instancetype
  failurePolicy: Fail
  name: vinstancetype.kb.io
  rules:
  - apiGroups:
    - compute.datumapis.com
    apiVersions:
    - v1alpha
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - instancetypes
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-compute-datumapis-com-v1alpha-workload
  failurePolicy: Fail
  name: vworkload.kb.io
  rules:
  - apiGroups:
    - compute.datumapis.com
    apiVersions:
    - v1alpha
    operations:
    - CREATE
    - UPDATE
    resources:
    - workloads
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-compute-datumapis-com-v1alpha-workloaddeployment
  failurePolicy: Fail
  name: vworkloaddeployment.kb.io
  rules:
  - apiGroups:
    - compute.datumapis.com
    apiVersions:
    - v1alpha
    operations:
    - CREATE
    - UPDATE
    resources:
    - workloaddeployments
  sideEffects: None
